--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<!-- <button mat-button [matMenuTriggerFor]="menu">Menu</button>
 <mat-menu #menu="matMenu">
   <button mat-menu-item routerLink="/crear-curso-component" routerLinkActive="active">Crear Curso </button>
   <button mat-menu-item routerLink="/curso-component" routerLinkActive="active">Cursos</button>
 
-</mat-menu>
+</mat-menu> -->
 <router-outlet></router-outlet>
