--- a/src/app/modules/curso/cursos/cursos.component.html
+++ b/src/app/modules/curso/cursos/cursos.component.html
@@ -1,7 +1,18 @@
-<h3>Cursos</h3>
-<button mat-raised-button color="primary" [routerLink]="'/crear-curso-component/new'" routerLinkActive="active">Cargar Nuevo Alumno</button>
+<button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item routerLink="/cursos/crear-curso-component/new" routerLinkActive="active">Crear Curso </button>
+  <button mat-menu-item routerLink="/cursos/curso-component" routerLinkActive="active">Cursos</button>
+  <hr>
+  <button mat-menu-item routerLink="/personas/persona/new" routerLinkActive="active">Crear Persona </button>
+  <button mat-menu-item routerLink="/personas/tablaPersona" routerLinkActive="active">Personas</button>
+  <hr>
+  <button mat-menu-item routerLink="/personas/funciones" routerLinkActive="active">Funciones</button>
+</mat-menu>
 
-<router-outlet></router-outlet>
+
+<h3>Cursos</h3>
+<button mat-raised-button color="primary" [routerLink]="'/cursos/crear-curso-component/new'" routerLinkActive="active">Cargar Nuevo Curso</button>
+
 
 <mat-table [dataSource]="dataSource" class="mat-elevation-z8"  >
   
@@ -52,3 +63,4 @@
   </mat-table>
 
  
+  <router-outlet></router-outlet>
