--- a/src/app/modules/persona/funciones/funciones.component.html
+++ b/src/app/modules/persona/funciones/funciones.component.html
@@ -10,9 +10,21 @@
 </mat-menu>
 
 <h3>FUNCIONES</h3>
+
 <BR>
 <button type="button" mat-raised-button color="primary" (click)="funcion()">Funciones</button>
 
-<br>
 
-<p>Las funicones se envian por consola</p>
+<p>{{var1}}</p>
+<p>{{var2}}</p>
+<p>{{var3}}</p>
+<p>{{var4}}</p>
+<p>{{var5}}</p>
+<p>{{var6}}</p>
+<p>{{var7}}</p>
+<p>{{var8}}</p>
+<p>{{var9}}</p>
+<p>{{var10}}</p>
+<p>{{var11}}</p>
+<p>{{var12}}</p>
+
